Closed Bug 1148888 Opened 10 years ago Closed 10 years ago

Message string for SMTP server connection error is incorrect. File: composeMsgs.properties, key: smtpAuthNotSupported

Categories

(MailNews Core :: Composition, defect)

defect
Not set
normal

Tracking

(thunderbird40 fixed)

RESOLVED FIXED
Thunderbird 40.0
Tracking Status
thunderbird40 --- fixed

People

(Reporter: iacchi, Assigned: sshagarwal)

Details

Attachments

(1 file)

In composeMsgs.properties, the key smtpAuthNotSupported shows the text "Unable to authenticate to Outgoing server (SMTP) %S. It does not support authentication (Outgoing server (SMTP)-AUTH) but you have chosen to use authentication. Please change the 'Authentication method' to 'None' in the 'Account Settings | Outgoing Server (SMTP)' or contact your email service provider for instructions." The part "It does not support authentication (Outgoing server (SMTP)-AUTH)" is wrong and the error is probably due to an incorrect Search & Replace operation. The sentence should be "It does not support authentication (SMTP-AUTH)"
Fallout from bug 952493 which changed the string as a drive-by fix. Suyash, do you want to fix this for Thunderbird as well? Also, have a look at bug 1148887, there may be more cases.
Attached patch Patch v1Splinter Review
Sure. So, this fixes the string for both TB and SM. Thanks.
Attachment #8590437 - Flags: review?(iann_bugzilla)
Component: MailNews: Composition → Composition
Product: SeaMonkey → MailNews Core
Assignee: nobody → syshagarwal
Status: NEW → ASSIGNED
Attachment #8590437 - Flags: review?(iann_bugzilla) → review+
Thanks.
Keywords: checkin-needed
Comment on attachment 8590437 [details] [diff] [review] Patch v1 a=me SeaMonkey CLOSED TREE
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 40.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: