Bug 1148888 - Message string for SMTP server connection error is incorrect. File: composeMsgs.properties, key: smtpAuthNotSupported. r=IanN a=Ratty for SeaMonkey CLOSED TREE